; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/test/unit/extr_junk.c_arena_dalloc_junk_large_intercept.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/test/unit/extr_junk.c_arena_dalloc_junk_large_intercept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [57 x i8] c"Missing junk fill for byte %zu/%zu of deallocated region\00", align 1
@watch_for_junking = common dso_local global i8* null, align 8
@saw_junking = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @arena_dalloc_junk_large_intercept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arena_dalloc_junk_large_intercept(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @arena_dalloc_junk_large_orig(i8* %6, i64 %7)
  store i64 0, i64* %5, align 8
  br label %9

9:                                                ; preds = %21, %2
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %24

13:                                               ; preds = %9
  %14 = load i8*, i8** %3, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds i8, i8* %14, i64 %15
  %17 = load i8, i8* %16, align 1
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @assert_c_eq(i8 signext %17, i32 90, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0), i64 %18, i64 %19)
  br label %21

21:                                               ; preds = %13
  %22 = load i64, i64* %5, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %5, align 8
  br label %9

24:                                               ; preds = %9
  %25 = load i8*, i8** %3, align 8
  %26 = load i8*, i8** @watch_for_junking, align 8
  %27 = icmp eq i8* %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %24
  store i32 1, i32* @saw_junking, align 4
  br label %29

29:                                               ; preds = %28, %24
  ret void
}

declare dso_local i32 @arena_dalloc_junk_large_orig(i8*, i64) #1

declare dso_local i32 @assert_c_eq(i8 signext, i32, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
